# uv_showtime

./: .gitignore
.github/workflows/: build_comparison.yml
pip_project/: Dockerfile  requirements.txt
poetry_project/: Dockerfile  pyproject.toml
uv_project/: Dockerfile  pyproject.toml
