[project]
name = "uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "logfire>=4.3.3",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]
